switched base image