@@ -1,15 +1,17 @@
-FROM dockerfile/java
+FROM java:openjdk-8-jre
 MAINTAINER mkroli
 
-ENV JAVA_HOME /usr/lib/jvm/java-7-oracle
+ENV JAVA_HOME /usr/lib/jvm/java-8-openjdk-amd64
+
+ADD https://raw.githubusercontent.com/paulp/sbt-extras/master/sbt /usr/bin/sbt
+RUN chmod 0755 /usr/bin/sbt
 
 ADD build.sbt /tmp/cdns/build.sbt
 ADD project/plugins.sbt /tmp/cdns/project/plugins.sbt
 ADD src /tmp/cdns/src
 
 WORKDIR /tmp/cdns
-RUN wget http://repo.typesafe.com/typesafe/ivy-releases/org.scala-sbt/sbt-launch/0.13.2/sbt-launch.jar -O sbt.jar && \
-    java -XX:MaxPermSize=128m -jar sbt.jar packArchive && \
+RUN sbt packArchiveTgz && \
     mkdir -p /opt/cdns && \
     tar --strip-components=1 -C /opt/cdns -xzf /tmp/cdns/target/cdns*.tar.gz && \
     rm -rf /root/.ivy /root/.sbt /tmp/cdns
